# rift

./: CMakeLists.txt  CMakeLists.txt.old  Makefile  bootstrap.sh  deployment_script.sh  rift-tree.txt  rift_pipeline_scaffolding.sh  rift_production_bootstrap.sh  rift_tree.txt  rifttree.txt  root_build_infastructure.sh
cmake/common/: compiler_pipeline.cmake
docs/BYTECODE/: ast_aware_system.h  irp_intuition_layer.h  reference_and_technical.md  validation_testing_framework.h
include/: rift.h
include/rift/cli/: commands.h
poc/gov/: Makefile  rift_governance_validator.c
poc/gov/rift/src/cli/: main.c
rift/: .riftrc
rift-0/: CMakeLists.txt  Makefile  lexem-caclation-demo.c  rift-0.pc.in  rift-0.txt  rift-tree.txt
rift-0/cmake/: rift_stage_macros.cmake
rift-0/config_templates/: rift-0.pc.in
rift-0/include/rift-0/core/: rift_tokenizer.h  tokenizer.h  tokenizer_rules.h  tokenizer_types.h
rift-0/src/cli/: main.c
rift-0/src/core/: rift_tokenizer.c  tokenizer.c  tokenizer_rules.c  tokenizer_utilities.c
rift-0/tests/unit/: test_tokenizer.c
rift-1/: CMakeLists.txt
rift-2/: CMakeLists.txt
rift-3/: CMakeLists.txt
rift-4/: CMakeLists.txt
rift-5/: CMakeLists.txt
rift-6/: CMakeLists.txt
rift/src/core/stage-0/: tokenizer.c
rift/src/core/stage-1/: parser.c
rift/src/core/stage-2/: semantic.c
rift/src/core/stage-3/: validator.c
rift/src/core/stage-4/: bytecode.c
rift/src/core/stage-5/: verifier.c
rift/src/core/stage-6/: emitter.c
rift0/: .riftrc  Makefile  Makefile.backup.20250612_193249  Makefile.backup.20250612_193250  README.md  csv_fix.sh  diagnostic_fix.sh  refactoring_script.sh  rift0.txt  run.sh  run_rift0.sh  run_rift0_demo.sh
rift0/examples/: sample.rift.0  sample.rift.0.0
rift0/examples/basic/: hello.rift.0  sample.rift.0
rift0/examples/csv/: Makefile  advanced_parser.rift.0
rift0/examples/csv/src/: csv_benchmark.c  csv_parser_advanced.c
rift0/examples/governance/: policy_example.rift.0
rift0/include/: rift.h
rift0/include/rift0/: rift.h
rift0/include/rift0/cli/command/: config_handler.h  pattern_manager.h
rift0/include/rift0/core/r_extension/: r_extensions.h
rift0/output/: sample.rift.0
rift0/src/cli/: main.c
rift0/src/cli/command/: command_handler.c  config_handler.c  config_handler.h
rift0/src/core/: main.c  rift_automaton.c  rift_config.c  rift_core.c  rift_engine.c  rift_pattern.c
rift0/tests/qa_mocks/: test_automaton.c
rift1/: MIGRATION_REPORT.md  Makefile  output.txt
rift1/cmake/: Build.cmake
rift1/include/rift1/core/: rift_ast.h  rift_automaton.h  rift_core.h  rift_ir.h  rift_parser.h  rift_token_memory.h  rift_types.h
rift1/include/rift1/core/config/: rift_advanced_config_structures.h  rift_pipeline_simple.h
rift1/include/rift1/core/tokenizer/: tokenizer.h
rift1/include/rift1/lexer/: lexer.h
rift1/include/rift1/rift_files/: rift_format.h
rift1/include/rift1/token_memory/: token_memory.h
rift1/include/rift1/token_types/: token_type.h
rift1/include/rift1/token_values/: token_value.h
rift1/src/cli/: main.c  rift1_cli.c
rift1/src/core/: rift1_ast.c  rift1_parsing.c  rift_ast.c  rift_automaton.c  rift_parser.c
rift1/src/core/lexer/: lexer.c
rift1/src/core/token_memory/: token_memory.c
rift1/src/core/token_types/: token_type.c
rift1/src/core/token_values/: token_value.c
rift1/src/core/tokenizer/: tokenizer.c
scripts/: bootstrap.sh  rift_production_bootstrap.sh  systematic_bootstrap.sh
src/cli/: CMakeLists.txt  main.c
src/cli/command/: config_handler.c  config_handler.h  stage_processor.c  stage_processor.h
src/core/: main.c  rift_automaton.c  rift_config.c  rift_engine.c  rift_pattern.c
tests/qa_mocks/: test_automaton.c
tools/: aegis_build_system.Makefile
